--- a/PaginaMostrarIda.html
+++ b/PaginaMostrarIda.html
@@ -2,7 +2,7 @@
   <head>
 	<title>FLIGHTS FOUND</title>
   </head>
-  <body background= "C:\Users\extsvazquez\Downloads\LogoAerolinea.jpg">
+  <body background= "https://creativemarket.com/BekBlack/2003263-Dragon-Logo-Template">
 	<h1 style="color:#FFFFFF"> FLIGHTS FOUND </h1>
 	<br>
 	<p>
