Subo el html con el form

--- a/Frontend/testForm.html
+++ b/Frontend/testForm.html
@@ -5,17 +5,15 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form method="GET" action="https://google.com/doSomething">
-	<p><input type="radio" value="01" name="parameterName"> 01 label? </input>
-	<input type="radio" value="02" name="parameterName"> 02 label? </input>
-	<input type="radio" value="03" name="parameterName"> 03 label? </input>
+<form method="POST" action="http://localhost/booking">
+	<p><input type="radio" value="01" name="flightId"> flight 0sdssdadasdsadsadsas1</input>
+	<input type="radio" value="02" name="flightId"> 02 flidasdadsdsasght </input>
+	<input type="radio" value="03" name="flightId"> fasfafsasfafsafsasfa03 flight </input>
 	</p>
 	<p>
-		<input type="checkbox" name="parameterName02" value="check01">test 01</input>
-		<input type="checkbox" name="parameterName02" value="check02">test 02</input>
-		<input type="checkbox" name="parameterName02" value="check03">test 03</input>
+		<input type="hidden" name="userId" value="31231">test s s s swadwa d fsef03</input>
 	</p>
-	<input type="submit">send</input>
+	<input type="submit" value="Comprar"/>
 </form>
 
 </body>
