--- a/Frontend/testForm.html
+++ b/Frontend/testForm.html
@@ -5,6 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
+<!-- Action URL *should* be relative and not absolute. it's an example -->
 <form method="POST" action="http://localhost/booking">
 	<p><input type="radio" value="01" name="flightId"> flight 0sdssdadasdsadsadsas1</input>
 	<input type="radio" value="02" name="flightId"> 02 flidasdadsdsasght </input>
